force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <description>Records every inbound REST and outbound callout outcome plus event-processing failures; powers the monitoring console and DLQ alerting.</description>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>