force-app/main/default/objects/Integration_Log__c/fields/Latency_Ms__c.field-meta.xml
<CustomField>
    <fullName>Latency_Ms__c</fullName>
    <description>Callout duration</description>
    <label>Latency Ms</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>