force-app/main/default/objects/Integration_Log__c/fields/Logged_At__c.field-meta.xml
<CustomField>
    <fullName>Logged_At__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Time-series axis</description>
    <label>Logged At</label>
    <type>DateTime</type>
</CustomField>