force-app/main/default/objects/Integration_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>e.g. VendorSync, PortalStatusUpdate</description>
    <externalId>true</externalId>
    <label>Operation</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>