force-app/main/default/objects/Integration_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>WO/SR Id for correlation</description>
    <externalId>true</externalId>
    <label>Related Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>